// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Expandable Component > should maintain visual consistency between expanded and collapsed states 1`] = `
<DocumentFragment>
  <div
    class="_container_d68a27"
  >
    <div
      class="_toggle_d68a27"
    >
      show more...
    </div>
  </div>
</DocumentFragment>
`;

exports[`Expandable Component > should maintain visual consistency between expanded and collapsed states 2`] = `
<DocumentFragment>
  <div
    class="_container_d68a27"
  >
    <div
      class="_expandableBlock_d68a27"
    />
    <div
      class="_toggle_d68a27"
    >
      show less
    </div>
  </div>
</DocumentFragment>
`;

exports[`Expandable Component > should match snapshot for documented usage in MDX 1`] = `
<DocumentFragment>
  <div
    class="_container_d68a27"
  >
    <div
      class="_toggle_d68a27"
    >
      show more...
    </div>
  </div>
</DocumentFragment>
`;
